HW7 clarified and fixed Clafiried by @andriygav.

--- a/MIPT/homeworks/HW7/main.ipynb
+++ b/MIPT/homeworks/HW7/main.ipynb
@@ -31,27 +31,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wAg8ll7MAzJB",
-        "outputId": "4b050348-fb57-4051-bbd1-00f74e9a6a31"
+        "outputId": "46aebebc-4f57-4b5e-9283-561efc371a89"
       },
       "source": [
         "!mkdir ./data\n",
         "!wget https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem7/zhestov.ea%40phystech.edu.csv -O data/zhestov.ea@phystech.edu.csv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-03-23 21:36:06--  https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem7/zhestov.ea%40phystech.edu.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2021-03-24 08:02:03--  https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem7/zhestov.ea%40phystech.edu.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 280043 (273K) [text/plain]\n",
             "Saving to: ‘data/zhestov.ea@phystech.edu.csv’\n",
             "\n",
-            "data/zhestov.ea@phy 100%[===================>] 273.48K  --.-KB/s    in 0.04s   \n",
+            "data/zhestov.ea@phy 100%[===================>] 273.48K  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2021-03-23 21:36:06 (7.12 MB/s) - ‘data/zhestov.ea@phystech.edu.csv’ saved [280043/280043]\n",
+            "2021-03-24 08:02:04 (10.4 MB/s) - ‘data/zhestov.ea@phystech.edu.csv’ saved [280043/280043]\n",
             "\n"
           ],
           "name": "stdout"
@@ -61,31 +61,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nQ-GB5ZbBBGq"
+        "id": "nQ-GB5ZbBBGq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4b00f3b4-8061-430a-9acc-9b7525be8a64"
       },
       "source": [
         "import pandas as pd\n",
         "import seaborn as sns\n",
         "import statsmodels.api as sm"
       ],
-      "execution_count": 15,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n"
+          ],
+          "name": "stderr"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 204
         },
         "id": "cw67rbjSBVlJ",
-        "outputId": "80795154-799f-4be3-bd23-5105c28ebd4b"
+        "outputId": "f50c3fc7-26ab-4d23-e5a0-125706f362eb"
       },
       "source": [
         "data = pd.read_csv('data/zhestov.ea@phystech.edu.csv', header=None)\n",
         "data.head()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +224,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -220,10 +233,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 317
         },
         "id": "HJgGh54PCVLX",
-        "outputId": "6a2317cf-b311-4025-af4a-b763af2da641"
+        "outputId": "16eedd58-209c-4815-b3f0-d22a915cff86"
       },
       "source": [
         "column_names = list(map(lambda num: f\"X{num - 1}\", data.columns))\n",
@@ -232,7 +245,7 @@
         "data.columns = column_names\n",
         "data.describe()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -403,7 +416,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 5
         }
       ]
     },
@@ -414,14 +427,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QBtX48A0CWXd",
-        "outputId": "83c11e91-b92c-4ac5-cf63-3e4682675706"
+        "outputId": "b0b9f016-c750-481c-e852-1b8aa609b05b"
       },
       "source": [
         "X = data.drop(\"Y\", axis=1)\n",
         "y = data[\"Y\"]\n",
         "print(X.shape, y.shape)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -445,7 +458,7 @@
       "source": [
         "sns.pairplot(data)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,16 +511,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 644
+          "height": 633
         },
         "id": "3mcA72OJEoHt",
-        "outputId": "fb59aee6-724e-4b6b-b0f1-89c5b995693b"
+        "outputId": "6ba346e7-b46b-4428-fbcb-357ed868179a"
       },
       "source": [
         "lin_model = sm.OLS(endog=y, exog=sm.add_constant(X)).fit()\n",
         "lin_model.summary()"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -525,10 +538,10 @@
               "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>  0.7393</td>\n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Date:</th>             <td>Tue, 23 Mar 2021</td> <th>  Prob (F-statistic):</th>  <td> 0.688</td> \n",
+              "  <th>Date:</th>             <td>Wed, 24 Mar 2021</td> <th>  Prob (F-statistic):</th>  <td> 0.688</td> \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>                 <td>21:56:53</td>     <th>  Log-Likelihood:    </th> <td> -3134.8</td>\n",
+              "  <th>Time:</th>                 <td>08:02:19</td>     <th>  Log-Likelihood:    </th> <td> -3134.8</td>\n",
               "</tr>\n",
               "<tr>\n",
               "  <th>No. Observations:</th>      <td>  1000</td>      <th>  AIC:               </th> <td>   6292.</td>\n",
@@ -604,8 +617,8 @@
               "Dep. Variable:                      Y   R-squared:                       0.007\n",
               "Model:                            OLS   Adj. R-squared:                 -0.003\n",
               "Method:                 Least Squares   F-statistic:                    0.7393\n",
-              "Date:                Tue, 23 Mar 2021   Prob (F-statistic):              0.688\n",
-              "Time:                        21:56:53   Log-Likelihood:                -3134.8\n",
+              "Date:                Wed, 24 Mar 2021   Prob (F-statistic):              0.688\n",
+              "Time:                        08:02:19   Log-Likelihood:                -3134.8\n",
               "No. Observations:                1000   AIC:                             6292.\n",
               "Df Residuals:                     989   BIC:                             6346.\n",
               "Df Model:                          10                                         \n",
@@ -639,7 +652,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 7
         }
       ]
     },
@@ -664,7 +677,7 @@
       "source": [
         "from statsmodels.stats.diagnostic import het_breuschpagan"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -674,12 +687,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5K8sM5Z0FwDg",
-        "outputId": "3dc21b97-01c6-4503-9185-376edd01d262"
+        "outputId": "d4089ce8-2de0-4517-98e5-d46051228b60"
       },
       "source": [
         "het_breuschpagan(lin_model.resid, X)[3] > 0.05"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +704,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 9
         }
       ]
     },
@@ -722,7 +735,7 @@
       "source": [
         "from scipy import stats as st"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -750,12 +763,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5_zapM-tJiER",
-        "outputId": "4a8998c7-cc44-4781-9b5e-087015d0c6ab"
+        "outputId": "e6390b9c-7ae2-4357-b350-99b21afd0800"
       },
       "source": [
         "print(round(st.boxcox(y)[1], 3))"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,16 +796,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 644
+          "height": 633
         },
         "id": "V3OuJD_LJ734",
-        "outputId": "7e4d6d0d-9d8f-476b-dccc-7375f9b11b20"
+        "outputId": "d92249e2-5373-4bc8-a54a-7428cac2e1df"
       },
       "source": [
         "new_model = sm.OLS(exog=sm.add_constant(X[0:100]), endog=y[0:100]).fit()\n",
         "new_model.summary()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,10 +823,10 @@
               "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>  0.9838</td>\n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Date:</th>             <td>Tue, 23 Mar 2021</td> <th>  Prob (F-statistic):</th>  <td> 0.463</td> \n",
+              "  <th>Date:</th>             <td>Wed, 24 Mar 2021</td> <th>  Prob (F-statistic):</th>  <td> 0.463</td> \n",
               "</tr>\n",
               "<tr>\n",
-              "  <th>Time:</th>                 <td>22:20:23</td>     <th>  Log-Likelihood:    </th> <td>  782.61</td>\n",
+              "  <th>Time:</th>                 <td>08:02:31</td>     <th>  Log-Likelihood:    </th> <td>  782.61</td>\n",
               "</tr>\n",
               "<tr>\n",
               "  <th>No. Observations:</th>      <td>   100</td>      <th>  AIC:               </th> <td>  -1543.</td>\n",
@@ -889,8 +902,8 @@
               "Dep. Variable:                      Y   R-squared:                       0.100\n",
               "Model:                            OLS   Adj. R-squared:                 -0.002\n",
               "Method:                 Least Squares   F-statistic:                    0.9838\n",
-              "Date:                Tue, 23 Mar 2021   Prob (F-statistic):              0.463\n",
-              "Time:                        22:20:23   Log-Likelihood:                 782.61\n",
+              "Date:                Wed, 24 Mar 2021   Prob (F-statistic):              0.463\n",
+              "Time:                        08:02:31   Log-Likelihood:                 782.61\n",
               "No. Observations:                 100   AIC:                            -1543.\n",
               "Df Residuals:                      89   BIC:                            -1515.\n",
               "Df Model:                          10                                         \n",
@@ -924,7 +937,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 32
+          "execution_count": 12
         }
       ]
     },
@@ -950,7 +963,7 @@
       "source": [
         "sns.pairplot(data[0:100])"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1004,7 +1017,7 @@
         "id": "8D32VDjyRq7u"
       },
       "source": [
-        "Вот тут я хз, надо ли приплетать константу, пока спрашиваю у Грабового в личку."
+        "Грабовой сказал, что константа тут не нужна"
       ]
     },
     {
@@ -1012,15 +1025,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 38
         },
         "id": "1wFnqy_7NEAf",
-        "outputId": "bb4f0ee8-7246-4c7c-bbea-78f2487dd78e"
+        "outputId": "ef989073-84c9-4e13-f98b-27a1c66fe73f"
       },
       "source": [
-        "new_model.f_test('const=X0=X1=X2=X3=X4=X5=X6=X7=X8=X9').summary()"
+        "new_model.f_test('X0 = X1 = X2 = X3 = X4 = X5 = X6 = X7 = X8 = X9 = 0').summary()"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,13 +1042,13 @@
               "type": "string"
             },
             "text/plain": [
-              "'<F test: F=array([[9.88495044e+11]]), p=0.0, df_denom=89, df_num=10>'"
+              "'<F test: F=array([[0.98376228]]), p=0.4634013086421723, df_denom=89, df_num=10>'"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 54
+          "execution_count": 15
         }
       ]
     },
@@ -1046,12 +1059,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tgND06iZPZuE",
-        "outputId": "00b75af1-f3bc-49a8-c1b0-788ad6b581b3"
+        "outputId": "6bfa447c-b3dc-4c89-ee2e-c4b72644a270"
       },
       "source": [
         "new_model.f_pvalue > 0.05"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1063,8 +1076,17 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 48
+          "execution_count": 16
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wv9qmVW3Q7tB"
+      },
+      "source": [
+        "Модель имеет смысл, ибо нулевая гипотеза, что все переменные 0 имеет pvalue больше 0.05"
       ]
     },
     {
@@ -1078,28 +1100,19 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "EMNuQDO9Rv_F"
-      },
-      "source": [
-        "Собственно та же проблема."
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 37
+          "height": 38
         },
         "id": "WZLRNTW4Pg7A",
-        "outputId": "d4477b25-ab01-4b21-d214-476e79bd466a"
+        "outputId": "917921e2-9b78-4044-dde0-5452f8696808"
       },
       "source": [
-        "new_model.wald_test('X0=X1=X2=X3=0').summary()"
+        "new_model.wald_test('X0 = X1 = X2 = X3 = 0').summary()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,20 +1127,18 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 17
         }
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "D5ZAK2DwRCxm"
+        "id": "VVn1aCiUSENK"
       },
       "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Нельзя обнулить, потому что гипотеза, что первые 4 переменные равны нулю, имеет pvalue больше 0.05"
+      ]
     }
   ]
 }
