typo fixed in .ipynb

--- a/MIPT/homeworks/HW8/main.ipynb
+++ b/MIPT/homeworks/HW8/main.ipynb
@@ -37,7 +37,7 @@
         "!mkdir data\n",
         "!wget https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem8/zhestov.ea%40phystech.edu.csv -O data/zhestov.ea@phystech.edu.csv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
         "from sklearn.metrics import accuracy_score\n",
         "import statsmodels.api as sm"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
       "source": [
         "data = pd.read_csv('data/zhestov.ea@phystech.edu.csv', header=None)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,7 +96,7 @@
       "source": [
         "data.head()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -243,7 +243,7 @@
         "data.columns = column_names\n",
         "data.describe()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
         "y = data['Y']\n",
         "print(X.shape, y.shape)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +456,7 @@
       "source": [
         "sns.pairplot(data)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
         "logit_model = sm.Logit(endog=y, exog=sm.add_constant(X)).fit()\n",
         "logit_model.summary()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -655,7 +655,7 @@
       "source": [
         "y.sum()"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
         "import numpy as np\n",
         "np.exp(logit_model.params)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
         "p_resp_normed = p_resp / len(response)\n",
         "OR = (p_endog_normed / (1 - p_endog_normed)) * ((1 - p_resp_normed) / p_resp_normed)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -749,7 +749,7 @@
       "source": [
         "np.round(OR, decimals=2)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -787,7 +787,7 @@
       "source": [
         "np.round(accuracy_score(y, response), decimals=2)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,7 +822,7 @@
         "X = X[0:100]\n",
         "y = y[0:100]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -839,7 +839,7 @@
         "new_model = sm.Logit(endog=y, exog=sm.add_constant(X)).fit()\n",
         "new_model.summary()"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -965,7 +965,7 @@
         "string = reduce(lambda x, a: a + x, reversed(' = '.join(map(lambda x: f'X{x}', range(10)))))\n",
         "string = 'const = ' + string"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -981,7 +981,7 @@
       "source": [
         "new_model.wald_test(string).summary()"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1006,7 +1006,7 @@
         "id": "DyhX6ig3NkoG"
       },
       "source": [
-        "Модель не имеет смысла, ибо нулевая гипотеза о том, что все переменные = 0 имеет pvalue меньше 0.05"
+        "Модель имеет смысл, ибо нулевая гипотеза о том, что все переменные = 0 имеет pvalue меньше 0.05"
       ]
     },
     {
@@ -1027,7 +1027,7 @@
       "source": [
         "string = reduce(lambda x, a: a + x, reversed(' = '.join(map(lambda x: f'X{x}', range(4)))))"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1043,7 +1043,7 @@
       "source": [
         "new_model.wald_test(string).summary()"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
