corrected the issue #1

--- a/MIPT/homeworks/HW10/main.ipynb
+++ b/MIPT/homeworks/HW10/main.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Applied_stats_10.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -31,27 +32,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xLEZfShM3qXI",
-        "outputId": "3496702e-52e2-48c8-8984-ab80447e3e38"
+        "outputId": "e1b05a06-f118-4461-fe9f-3152684dee11"
       },
       "source": [
         "!mkdir data\n",
         "!wget https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem10/zhestov.ea%40phystech.edu.csv -O data/zhestov.ea@phystech.edu.csv"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "--2021-04-13 20:14:47--  https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem10/zhestov.ea%40phystech.edu.csv\n",
+            "--2021-04-19 20:29:28--  https://raw.githubusercontent.com/Intelligent-Systems-Phystech/psad/master/hometask/sem10/zhestov.ea%40phystech.edu.csv\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 125000 (122K) [text/plain]\n",
             "Saving to: ‘data/zhestov.ea@phystech.edu.csv’\n",
             "\n",
-            "data/zhestov.ea@phy 100%[===================>] 122.07K  --.-KB/s    in 0.02s   \n",
+            "\r          data/zhes   0%[                    ]       0  --.-KB/s               \rdata/zhestov.ea@phy 100%[===================>] 122.07K  --.-KB/s    in 0.02s   \n",
             "\n",
-            "2021-04-13 20:14:48 (5.55 MB/s) - ‘data/zhestov.ea@phystech.edu.csv’ saved [125000/125000]\n",
+            "2021-04-19 20:29:29 (4.95 MB/s) - ‘data/zhestov.ea@phystech.edu.csv’ saved [125000/125000]\n",
             "\n"
           ],
           "name": "stdout"
@@ -65,12 +66,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K4USWvA75CLd",
-        "outputId": "343b7ac3-ea9f-4e4e-e19b-940250ec8908"
+        "outputId": "192b645e-17ee-472b-e891-f8ceb263cd9a"
       },
       "source": [
         "!pip install sprt"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -79,7 +80,7 @@
             "  Downloading https://files.pythonhosted.org/packages/42/4b/1f58d1966874f1361209456d7ce40086a5637fb8776696d3eeb134b8e5b4/sprt-0.0.1.tar.gz\n",
             "Building wheels for collected packages: sprt\n",
             "  Building wheel for sprt (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for sprt: filename=sprt-0.0.1-cp37-none-any.whl size=4037 sha256=bab563c1776d32e5d4a2a8e89e1a7a3b2cb0630a62b173c93fe6e07148a9fb24\n",
+            "  Created wheel for sprt: filename=sprt-0.0.1-cp37-none-any.whl size=4037 sha256=64d7a5db6210ec34be1dedbecff8481a315acbe3a6d18486e62ae5699f60c42f\n",
             "  Stored in directory: /root/.cache/pip/wheels/3f/4c/ce/fb40d71e64e7d1aecd9f6a9e1b1b8136d8591d34f8dfee1269\n",
             "Successfully built sprt\n",
             "Installing collected packages: sprt\n",
@@ -103,7 +104,7 @@
         "from math import floor\n",
         "from IPython.display import clear_output"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -114,13 +115,13 @@
           "height": 206
         },
         "id": "nuaES4LP30kZ",
-        "outputId": "a1f8f557-5e30-4cdc-caed-aa8cbcbd2707"
+        "outputId": "2c077464-3f98-4fec-dafc-7f3576e69b7f"
       },
       "source": [
         "df = read_csv('data/zhestov.ea@phystech.edu.csv', header=None)\n",
         "df.head()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -184,7 +185,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 119
+          "execution_count": 4
         }
       ]
     },
@@ -196,12 +197,12 @@
           "height": 300
         },
         "id": "ttiVPFHQ339r",
-        "outputId": "1df63757-06f2-4a61-91e2-0647856941b6"
+        "outputId": "f528b0b2-7a5a-4477-c3db-8156e69b7c3e"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -280,7 +281,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 120
+          "execution_count": 5
         }
       ]
     },
@@ -292,25 +293,25 @@
           "height": 318
         },
         "id": "Ti2M4SCl4LjH",
-        "outputId": "d49ce122-cab6-4728-dcbf-f5f5ab215835"
+        "outputId": "eac57df7-a20d-4d82-f7d4-a2a4388331a3"
       },
       "source": [
         "df.hist()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f50567808d0>]],\n",
+              "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x7f5371d10cd0>]],\n",
               "      dtype=object)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 123
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -353,13 +354,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rcmjKecy8c3h",
-        "outputId": "2f590268-4440-47ca-e9be-9a20f93cbee0"
+        "outputId": "bba0999c-fdcb-46f1-cfa9-b97904e4faab"
       },
       "source": [
         "p = len(df[df[0] == 1]) / len(df)\n",
         "print(f'p = {p:.3}')"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +389,7 @@
           "height": 649
         },
         "id": "YYyxXswn4nvH",
-        "outputId": "f385d571-c43c-427d-d478-562a4f0ea167"
+        "outputId": "b9f55f19-ba26-4842-e60a-315786c2a871"
       },
       "source": [
         "alpha = beta = 0.05\n",
@@ -396,7 +397,7 @@
         "test = SPRTBinomial(alpha=alpha, beta=beta, h0=0.5, h1=p, values=df[0])\n",
         "test.plot()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,12 +441,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aWz3vC3L9Osy",
-        "outputId": "634869b5-1061-471c-fe50-6ae0db4e2a5e"
+        "outputId": "653e9875-fdc4-4789-99e7-56eb6abeddc4"
       },
       "source": [
         "print(f'We {test.decision.lower()} the null hypothesis')"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -474,7 +475,7 @@
           "height": 429
         },
         "id": "w8QPEaGv5GUV",
-        "outputId": "68e5450a-19e8-43a6-d867-c53b7766511b"
+        "outputId": "cd9084d1-e8a0-4e5a-c365-dc8575342da4"
       },
       "source": [
         "i = 50\n",
@@ -489,7 +490,7 @@
         "test.plot()\n",
         "print(f'\\n Гипотеза отклоняется за {i} итераций')"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -553,7 +554,7 @@
         "def f(x, p, p_0):\n",
         "    return (1 - ((1 - p) / (1 - p_0))**x) / ((p / p_0)**x - ((1 - p) / (1 - p_0))**x) - p"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -563,10 +564,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZNhipROBBJA",
-        "outputId": "6a56c219-5d96-438f-cf8d-36d3370621c0"
+        "outputId": "940b1e46-3c1e-452b-ac7a-40dcad46b49d"
       },
       "source": [
-        "p = len(df[df[0] == 1]) / len(X)\n",
+        "p = len(df[df[0] == 1]) / len(df)\n",
         "p_0 = 0.5\n",
         "alpha = 0.05\n",
         "beta = 0.05\n",
@@ -578,7 +579,7 @@
         "h = sol.root\n",
         "print(f'\\nExpectation of the iterations count: {floor(expectation(p, p_0, alpha, beta, h))}')"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
